<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina6_1" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="System colors in document resources" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Skillbox_Task11" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" restorationIdentifier="LogIn" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="LogIn" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Tex-RT-7Ud">
                                <rect key="frame" x="30" y="144" width="354" height="34"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocorrectionType="no"/>
                            </textField>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" " textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Y2-x3-ACT">
                                <rect key="frame" x="30" y="188" width="354" height="18"/>
                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                <color key="textColor" red="1" green="0.1352810569" blue="0.1255096456" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" contentMode="scaleToFill" restorationIdentifier="Password" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iuo-xo-yGd">
                                <rect key="frame" x="30" y="248" width="354" height="34"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocorrectionType="no"/>
                            </textField>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" " textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DgM-dS-GIV">
                                <rect key="frame" x="30" y="292" width="354" height="18"/>
                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                <color key="textColor" red="1" green="0.1352810569" blue="0.1255096456" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FCq-40-6xy">
                                <rect key="frame" x="30" y="360" width="354" height="30"/>
                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <state key="normal" title="Enter">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="enterClickButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Rv3-hw-7U6"/>
                                </connections>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <constraints>
                            <constraint firstItem="FCq-40-6xy" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="AHn-c1-QCo"/>
                            <constraint firstItem="8Y2-x3-ACT" firstAttribute="top" secondItem="Tex-RT-7Ud" secondAttribute="bottom" constant="10" id="ChY-jX-ZQP"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="iuo-xo-yGd" secondAttribute="trailing" constant="30" id="Lec-XQ-N66"/>
                            <constraint firstItem="DgM-dS-GIV" firstAttribute="top" secondItem="iuo-xo-yGd" secondAttribute="bottom" constant="10" id="N2J-u6-vM9"/>
                            <constraint firstItem="iuo-xo-yGd" firstAttribute="top" secondItem="Tex-RT-7Ud" secondAttribute="bottom" constant="70" id="NPz-Q6-Nea"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="DgM-dS-GIV" secondAttribute="trailing" constant="30" id="NmR-fE-SMl"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Tex-RT-7Ud" secondAttribute="trailing" constant="30" id="Q4S-Vh-kJ8"/>
                            <constraint firstItem="Tex-RT-7Ud" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="100" id="UOI-BD-gfQ"/>
                            <constraint firstItem="DgM-dS-GIV" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="W7s-Ht-sRC"/>
                            <constraint firstItem="8Y2-x3-ACT" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="bpn-qY-dRu"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="8Y2-x3-ACT" secondAttribute="trailing" constant="30" id="dm3-dD-OJM"/>
                            <constraint firstItem="FCq-40-6xy" firstAttribute="top" secondItem="iuo-xo-yGd" secondAttribute="bottom" constant="78" id="jDF-h4-TFa"/>
                            <constraint firstItem="Tex-RT-7Ud" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="nPN-cK-t59"/>
                            <constraint firstItem="iuo-xo-yGd" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="owd-sA-JbW"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="FCq-40-6xy" secondAttribute="trailing" constant="30" id="ugC-Oi-BAn"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="enterButton" destination="FCq-40-6xy" id="ufm-w1-YFe"/>
                        <outlet property="infoLabel" destination="8Y2-x3-ACT" id="L8h-5Y-oez"/>
                        <outlet property="infoPasswordLabel" destination="DgM-dS-GIV" id="hRi-Mt-YIP"/>
                        <outlet property="logInTextField" destination="Tex-RT-7Ud" id="wGS-ks-dvy"/>
                        <outlet property="passwordTextField" destination="iuo-xo-yGd" id="IKl-Nx-GeO"/>
                        <segue destination="fmx-uO-yVt" kind="show" identifier="goToNextViewController" id="Bcz-hw-sEe"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="34.782608695652179" y="93.75"/>
        </scene>
        <!--New View Controller-->
        <scene sceneID="hDO-p0-By6">
            <objects>
                <viewController id="fmx-uO-yVt" customClass="NewViewController" customModule="Skillbox_Task11" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="HS0-jn-Kx1">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Succeed :)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ltb-3X-9uh">
                                <rect key="frame" x="135" y="405" width="144" height="32.5"/>
                                <fontDescription key="fontDescription" type="system" weight="black" pointSize="27"/>
                                <color key="textColor" red="0.53056743891552238" green="0.035211503350454428" blue="0.023252502326903891" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="Vc1-ak-YN3"/>
                        <color key="backgroundColor" red="1" green="0.1352810569" blue="0.1255096456" alpha="0.26713026438327814" colorSpace="custom" customColorSpace="displayP3"/>
                        <constraints>
                            <constraint firstItem="ltb-3X-9uh" firstAttribute="centerX" secondItem="HS0-jn-Kx1" secondAttribute="centerX" id="Cxe-be-wtG"/>
                            <constraint firstItem="ltb-3X-9uh" firstAttribute="centerY" secondItem="HS0-jn-Kx1" secondAttribute="centerY" id="bMr-1J-pTu"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="Tch-TV-EmC"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="6tj-YE-pfa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="791" y="94"/>
        </scene>
    </scenes>
    <resources>
        <systemColor name="systemBackgroundColor">
            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
        </systemColor>
    </resources>
</document>
